--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Title</title>
+        <meta charset="utf8">
+        <title>JavaScript learning</title>
     </head>
     <body>
-        <h1>h1</h1>
+        <h1>Arithmetical operations</h1>
+        <form name="calculatorForm">
+            <fieldset>
+                <legend>Calculator</legend>
+                <input id="value01" name="value01" type="number" value="0">
+                <select id="operations" name="operations">
+                    <option value="addition">+</option>
+                    <option value="subtraction">-</option>
+                    <option value="multiplication">*</option>
+                    <option value="division">/</option>
+                </select>
+                <input id="value02" name="value02" type="number" value="0">
+                <span> = </span>
+                <span id="operationResult">&nbsp;</span>
+            </fieldset>
+        </form>
         <script src="my.js"></script>
     </body>
 </html>
