--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                 <legend>Calculator</legend>
                 <input id="value01" name="value01" type="number" value="0">
                 <select id="operations" name="operations">
+                    <option></option>                        
                     <option value="addition">+</option>
                     <option value="subtraction">-</option>
                     <option value="multiplication">*</option>
