--- a/index.html
+++ b/index.html
@@ -5,23 +5,9 @@
         <title>JavaScript learning</title>
     </head>
     <body>
-        <h1>Arithmetical operations</h1>
-        <form name="calculatorForm">
-            <fieldset>
-                <legend>Calculator</legend>
-                <input id="value01" name="value01" type="number" value="0">
-                <select id="operations" name="operations">
-                    <option></option>                        
-                    <option value="addition">+</option>
-                    <option value="subtraction">-</option>
-                    <option value="multiplication">*</option>
-                    <option value="division">/</option>
-                </select>
-                <input id="value02" name="value02" type="number" value="0">
-                <span> = </span>
-                <span id="operationResult">&nbsp;</span>
-            </fieldset>
-        </form>
-        <script src="my.js"></script>
+        
+        <script src="https://download.agora.io/sdk/release/AgoraRTC_N-<the.version.number>.js"></script>
+        <script src="./AgoraRTC_N-<the.version.number>.js"></script>
+
     </body>
 </html>
