--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title>Title</title>
     </head>
     <body>
-        <h1>h1</h1>
-        <script src="my.js"></script>
+        <script src="https://download.agora.io/sdk/release/AgoraRTC_N-4.18.2.js"></script>
+
+        
     </body>
 </html>
