--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
         <title>Title</title>
     </head>
     <body>
-        <script src="https://download.agora.io/sdk/release/AgoraRTC_N-4.18.2.js"></script>
+        <script src="./AgoraRTC_N-4.18.2.js"></script>
 
         
     </body>
